Fix padding, make image a link, no app link on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -293,4 +293,8 @@ p {
 	height: initial;
 	width: initial;
     }
+
+    .online-environment-description {
+	padding-left: 0;
+    }
 }
